--- a/404.html
+++ b/404.html
@@ -1,7 +1,10 @@
 ---
 layout: default
-title : 404
+title: "404: Page not found"
+permalink: 404.html
 ---
 
-<script type="text/javascript" src="http://www.qq.com/404/search_children.js" charset="utf-8"></script>
-
+<div class="page">
+  <h1 class="page-title">404: Page not found</h1>
+  <p class="lead">Sorry, we've misplaced that URL or it's pointing to something that doesn't exist. <a href="{{ site.baseurl }}">Head back home</a> to try finding it again.</p>
+</div>
