--- a/love/index.html
+++ b/love/index.html
@@ -1,8 +1,6 @@
 ---
-title: 胖梁 与 丹宝宝
-wedding_day: "2014,02,14"
-me: 胖梁
-her: 丹宝宝
+title: 杭州老李
+me: 杭州老李
 ---
 <html>
     <head>
@@ -24,42 +22,6 @@ her: 丹宝宝
     	</style>
     </head>
     <body>
-			<audio autoplay="autopaly">
-					<source src="http://qiniucdn.zhaoxiaodan.com/2014/Lucky%20Star-Joana%20Zimmer.mp3" type="audio/mp3" />
-			</audio>
-        <div id="main">
-            <div id="error">本页面采用HTML5编辑，目前您的浏览器无法显示，请换成谷歌(<a href="http://www.google.cn/chrome/intl/zh-CN/landing_chrome.html?hl=zh-CN&brand=CHMI">Chrome</a>)或者火狐(<a href="http://firefox.com.cn/download/">Firefox</a>)浏览器，或者其他游览器的最新版本。</div>
-            <div id="wrap">
-                <div id="text">
-			        <div id="code">
-			        	<span class="say">我们的故事</span><br>
-						<span class="say"> </span><br>
-						<span class="say"> For <a href="http://418094911.qzone.qq.com/" alt="pangliang">{{ page.me }}</a> & <a href="http://576238515.qzone.qq.com/" alt="danbaobao">{{ page.her }}</a></span><br><br><br>
-						<span class="say"> </span><br>
-                        <span class="say">老婆，老公爱你</span><br>
-						<span class="say"> </span><br>
-			        	<span class="say">老公什么都没有，只有一颗温暖的心</span><br>
-						<span class="say"> </span><br>
-			        	<span class="say">老公把这颗心都给了你</span><br>
-						<span class="say"> </span><br>
-			        	<span class="say">老公那么霸道</span><br>
-						<span class="say"> </span><br>
-			        	<span class="say">也只对你一人</span><br>
-						<span class="say"> </span><br>
-			        	<span class="say">老公爱你很爱很爱</span><br>
-						<span class="say"> </span><br>
-                        <span class="say"><span class="space"></span>{{ page.me }} 与 {{ page.her }}</span>
-			        </div>
-                </div>
-                <div id="clock-box">
-                    {{ page.me }}<span class="STYLE1">与</span>{{ page.her }}<span class="STYLE1">的故事已经开始了</span>
-                  <div id="clock"></div>
-              </div>
-                <canvas id="canvas" width="1100" height="680"></canvas>
-            </div>
-            
-        </div>
-    
     <script>
     </script>
 
